--- a/src/app/pages/GUI/home/gui-home.component.scss
+++ b/src/app/pages/GUI/home/gui-home.component.scss
@@ -16,6 +16,7 @@ app-gui-home {
     .window {
         margin: 2em;
         width: 70vw;
+        font-size: 16px;
     }
     
     color: black;
