updated education strings

--- a/src/app/pages/GUI/projects/projects.component.html
+++ b/src/app/pages/GUI/projects/projects.component.html
@@ -1,7 +1,7 @@
 <h1>Projects</h1>
 <hr>
 <h2>This section is coming soon!</h2>
-<p>In the meantime... we don't you practice your spanish skills and read this short story?</p>
+<p>In the meantime... why don't you practice your spanish skills and read this short story?</p>
 
 <h4>Un nene encontró un galletita Sonrisa triste y quedó traumado</h4>
 
