Updates and minor fixes

--- a/src/app/pages/GUI/education/education.component.html
+++ b/src/app/pages/GUI/education/education.component.html
@@ -9,17 +9,17 @@
         Institution: Universidad Nacional de La Matanza (Argentina, Buenos Aires)
     </li>
     <li>
-        <a href="https://ingenieria.unlam.edu.ar/index.php?seccion=3&idArticulo=30">Program</a>
+        <a href="https://ingenieria.unlam.edu.ar/index.php?seccion=3&idArticulo=30">Program (or study plan)</a>
     </li>
     <li>
         Start year: 2017
     </li>
     <li>
-        Graduation year: 2022 (soon!)
+        Graduation year: 2022 (wow!)
     </li>
-    <li>Completed subjects to date: 42/44</li>
+    <li>Completed subjects to date: 44/44</li>
     <li>
-        Average grade to date: 8,26
+        Average grade to date: 8,27
     </li>
 </ul>
 
