--- a/src/app/pages/GUI/projects/projects.component.html
+++ b/src/app/pages/GUI/projects/projects.component.html
@@ -8,7 +8,7 @@
 <div><img src="assets/sonrisatriste.jpg" alt="Not found"/></div>
 <p> "Voy a iniciar acciones legales contra Terrabusi"— ataca Daniela, la madre del chico, enardecida. </p>
 <p>"Pero Terrabusi debe tener muchos mas abogados que nosotros", le contestó un abogado de la firma que decidió afrontar el caso.</p>
-<p>"No, no, terabusi es de Navisco debe tener muchos muchísimos más abogados que nosotros", agrega otro abogado de la firma.</p>
+<p>"No, no, Terrabusi es de Navisco debe tener muchos muchísimos más abogados que nosotros", agrega otro abogado de la firma.</p>
 <p>"Paren, ¿Navisco no la compro Pepsi?" habla otro abogado.</p>
 <p>"No, me parece que es de Warner y Warner ¿cuántos abogados tiene?"</p>
 <p>"Para, porque a Warner lo compró AOL. Eso sería como treinta mil abogados. Huyamos, muchachos."</p>
@@ -16,7 +16,7 @@
 <p>"Es que acabo de baldear el patio"— aclara Daniela. "Cuando baldeo se pone resbaloso, hay que tener mucho cuidado."</p>
 <p>Un abogado aparece en la ventana y le dice a Daniela: —"Señora ¿podría usted llamar a una ambulancia? Creo que me fracturé la tibia."</p>
 <p>Daniela cierra la ventana y sigue la entrevista.</p>
-<p>"Estos tipos no saben nada: las Sonrisas son de BAGLEY. Aclaro yo lo sé porque las galletitas Bagley se distinguen por su sabor incomparable. Comprá sonrisas, BAGLEY es muy rico siempre."</p>
+<p>"Estos tipos no saben nada: las Sonrisas son de BAGLEY. Aclaro yo lo sé porque las galletitas Bagley se distinguen por su sabor incomparable. Comprá Sonrisas, BAGLEY es muy rico siempre."</p>
 <p>Se escucha un llanto de un niño. Aparece Pablin, el tierno infante que tuvo la desgracia.</p>
 <p>"Mamá, otra vez la pesadilla."— dice Pablin.</p>
 <p>"Sueña que un ejercito de Sonrisas malvadas y panchitas desquiciadas lo esperan en el colegio para atacarlo.	Pobrecito, hace una semana que no va al colegio"— nos dice la madre.</p>
