--- a/src/app/pages/GUI/about-me/about-me.component.html
+++ b/src/app/pages/GUI/about-me/about-me.component.html
@@ -4,7 +4,7 @@
 
 <h2>Basic info:</h2>
 
-<p>(Very soon to be a) Computer Science Engineer. Currently working as a Full Stack Web Developer, but not all my projects revolve around that.</p>
+<p>Computer Science Engineer. Currently working as a Full Stack Web Developer, but not all my projects revolve around that.</p>
 <p>I standout for my ability to solve problems. I'm constantly in the pursuit of new knowledge and techniques that I can acquire, learn, and put to test on my working field.</p>
 <p>I make all my solutions, projects and work focusing on quality, always placing myself on the side of the end user.</p>
 
